--- a/README
+++ b/README
@@ -1,13 +1,24 @@
 SAR Plugin for OpenCPN
 =======================================
 
-The purpose of this plugin is to provide Search and Rescue Patterns (SAR), Great Circle, Limited Circle and Rhumb line plotting capability to OpenCPN
+The purpose of this plugin is to provide Search and Rescue Patterns (SAR) plotting capability to OpenCPN
 
 The aims are to:
 
 1. Generate GPX files for a number of SAR patterns
-2. Generate GPX files for a number of route plotting methods (I have yet to decide whether I should code a seperate plugin for this) 
-3. Plot selected routes and SAR patterns directly in OpenCPN
+2. Plot selected SAR patterns directly in OpenCPN
+
+
+
+Development Steps
+=========
+Work with OpenCPN API (Done)
+Add Plugin Icon (Done)
+Set-up GUI (Done)
+Declare class to hold tracks
+Set-up SAR calculating functions
+Write tracks to GPX file
+Set-up config screen
 
 Compiling
 =========
