--- a/po/nl.po
+++ b/po/nl.po
@@ -3,17 +3,17 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-21 14:53-0400\n"
+"PO-Revision-Date: 2015-04-07 11:23-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
-"Language-Team: French\n"
-"Language: fr_FR\n"
+"Language-Team: Dutch\n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: crowdin.com\n"
 "X-Crowdin-Project: opencpn\n"
-"X-Crowdin-Language: fr\n"
+"X-Crowdin-Language: nl\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
 
 #: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
@@ -22,37 +22,37 @@ msgstr "SAR"
 
 #: src/SARgui.h:206 src/SARgui_impl.h:48
 msgid "SAR preferences"
-msgstr "Préférences"
+msgstr "SAR voorkeuren"
 
 #: src/SARgui.cpp:27
 msgid "Parallel Search"
-msgstr "Recherche par segments parallèles"
+msgstr "Parallel zoek-/npatroon"
 
 #: src/SARgui.cpp:39 src/SARgui.cpp:188
 msgid "Approach course     "
-msgstr "COG de recherche     "
+msgstr "Naderingskoers"
 
 #: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
 #: src/SARgui.cpp:462
 msgid "Degrees"
-msgstr "Degrés"
+msgstr "Graden"
 
 #: src/SARgui.cpp:56
 msgid "Leg Distance              "
-msgstr "Longueur du segment"
+msgstr "Tracklengte"
 
 #: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
 #: src/SARgui.cpp:445 src/SARgui.cpp:764
 msgid "NM"
-msgstr "Nm"
+msgstr "NM"
 
 #: src/SARgui.cpp:73
 msgid "Leg Spacing                "
-msgstr "Distance entre segments"
+msgstr "Trackafstand"
 
 #: src/SARgui.cpp:90
 msgid "Number of Legs       "
-msgstr "Nombres de segments"
+msgstr "Aantal tracks"
 
 #: src/SARgui.cpp:97 src/SARgui.cpp:229
 msgid "n"
@@ -60,15 +60,15 @@ msgstr "n"
 
 #: src/SARgui.cpp:107 src/SARgui.cpp:239
 msgid "Search Speed             "
-msgstr "Vitesse de recherche"
+msgstr "Zoeksnelheid"
 
 #: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
 msgid "kts"
-msgstr "Noeuds"
+msgstr "Knopen"
 
 #: src/SARgui.cpp:124
 msgid "For Ship Number      "
-msgstr "Pour le bateau numéro"
+msgstr "Voor vaartuig nr."
 
 #: src/SARgui.cpp:128 src/SARgui.cpp:359
 msgid "1"
@@ -80,79 +80,79 @@ msgstr "2"
 
 #: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
 msgid "Calculate"
-msgstr "Calculer"
+msgstr "Bereken"
 
 #: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
 msgid "Generate &GPX"
-msgstr "Générer un fichier GPX"
+msgstr "Maak &GPX"
 
 #: src/SARgui.cpp:165
 msgid "SAR: Trackline"
-msgstr "SAR : Par segments parallèles"
+msgstr "SAR: Trackliijn"
 
 #: src/SARgui.cpp:176
 msgid "Expanding Square\n         Search"
-msgstr "Recherche selon des carrés imbriqués\n     "
+msgstr "Vierkant zoek-/npatroon"
 
 #: src/SARgui.cpp:205
 msgid "Leg Distance               "
-msgstr "Longueur du segment"
+msgstr "Tracklengte"
 
 #: src/SARgui.cpp:222
 msgid "Number of Squares"
-msgstr "Nombre de carrés"
+msgstr "Aantal vierkanten"
 
 #: src/SARgui.cpp:283
 msgid "SAR: Expanding Square"
-msgstr "SAR : Par carrés imbriqués"
+msgstr "SAR: Vierkant zoekpatroon"
 
 #: src/SARgui.cpp:292
 msgid "Sector Search"
-msgstr "Recherche par zones triangulaires"
+msgstr "Sector zoekpatroon"
 
 #: src/SARgui.cpp:304 src/SARgui.cpp:421
 msgid "Approach course"
-msgstr "COG de recherche"
+msgstr "Naderingskoers"
 
 #: src/SARgui.cpp:321 src/SARgui.cpp:438
 msgid "Leg Distance          "
-msgstr "Longueur du segment"
+msgstr "Tracklengte          "
 
 #: src/SARgui.cpp:338
 msgid "Search Speed        "
-msgstr "Vitesse de recherche"
+msgstr "Zoeksnelheid"
 
 #: src/SARgui.cpp:355
 msgid "Number of cycles"
-msgstr "Nombre de cycles"
+msgstr "Aantal cycli"
 
 #: src/SARgui.cpp:398
 msgid "SAR: Sector Search"
-msgstr "SAR : Par zones triangulaires"
+msgstr "SAR: Sector zoekpatroon"
 
 #: src/SARgui.cpp:409
 msgid "Oil Rig Search"
-msgstr "Recherche dans un secteur angulaire"
+msgstr "Platform zoekpatroon"
 
 #: src/SARgui.cpp:455
 msgid "Number of Legs   "
-msgstr "Nombre de segments"
+msgstr "Aantal tracks   "
 
 #: src/SARgui.cpp:472
 msgid "Search Speed         "
-msgstr "vitesse de recherche"
+msgstr "Zoeksnelheid         "
 
 #: src/SARgui.cpp:516
 msgid "SAR: Oil Rig"
-msgstr "SAR: Dans un secteur angulaire"
+msgstr "SAR: Platform zoekpatroon"
 
 #: src/SARgui.cpp:529 src/SARgui.cpp:633
 msgid "Datum (Start of Search)"
-msgstr "Position du bateau : Point initial de recherche"
+msgstr "Datum (start van zoekpatroon)"
 
 #: src/SARgui.cpp:540
 msgid "Lattitude  "
-msgstr "Latitude"
+msgstr "Breedte"
 
 #: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
 msgid "\\u00b0"
@@ -160,23 +160,23 @@ msgstr "\\u00b0"
 
 #: src/SARgui.cpp:557
 msgid "Longitude"
-msgstr "Longitude"
+msgstr "Lengte"
 
 #: src/SARgui.cpp:578
 msgid "Ship"
-msgstr "Bateau"
+msgstr "Vaartuig"
 
 #: src/SARgui.cpp:579
 msgid "Copy ship position (GPS fix required)"
-msgstr "Copier la position du bateau (Le GPS doit avoir fait sont \"fixe\")"
+msgstr "Kopieer eigen positie (GPS-fix vereist)"
 
 #: src/SARgui.cpp:583
 msgid "Cursor"
-msgstr "Curseur"
+msgstr "Cursor"
 
 #: src/SARgui.cpp:599
 msgid "Search Pattern name for GPX file"
-msgstr "Recherche par nom de modèle pour le fichier GPX"
+msgstr "Naam zoekpatroon voor GPX-bestand"
 
 #: src/SARgui.cpp:607
 msgid "Route"
@@ -184,11 +184,11 @@ msgstr "Route"
 
 #: src/SARgui.cpp:627
 msgid "Decimal Degree"
-msgstr "Degré décimal"
+msgstr "Decimale graden"
 
 #: src/SARgui.cpp:641
 msgid "Lat "
-msgstr "Lat."
+msgstr "Br"
 
 #: src/SARgui.cpp:655 src/SARgui.cpp:692
 msgid "'"
@@ -204,23 +204,23 @@ msgstr "N"
 
 #: src/SARgui.cpp:666
 msgid "S"
-msgstr "S"
+msgstr "Z"
 
 #: src/SARgui.cpp:678
 msgid "Lon"
-msgstr "Lon"
+msgstr "Len"
 
 #: src/SARgui.cpp:703
 msgid "E"
-msgstr "E"
+msgstr "O"
 
 #: src/SARgui.cpp:703
 msgid "W"
-msgstr "O"
+msgstr "W"
 
 #: src/SARgui.cpp:721
 msgid "Convert to Degree"
-msgstr "Convertir en degré"
+msgstr "Converteer naar graden"
 
 #: src/SARgui.cpp:731
 msgid "\\u00b0 ' \""
@@ -228,81 +228,81 @@ msgstr "\\u00b0 ' \""
 
 #: src/SARgui.cpp:745
 msgid "Results"
-msgstr "Résultats"
+msgstr "Resultaten"
 
 #: src/SARgui.cpp:757
 msgid "Search Distance"
-msgstr "Longueur de la recherche"
+msgstr "Zoekafstand"
 
 #: src/SARgui.cpp:774
 msgid "Search Time        "
-msgstr "Durée de la recherche"
+msgstr "Zoektijd"
 
 #: src/SARgui.cpp:781
 msgid "hr"
-msgstr "hr"
+msgstr "u"
 
 #: src/SARgui.cpp:865
 msgid "General settings"
-msgstr "Réglage"
+msgstr "Algemene instellingen"
 
 #: src/SARgui.cpp:872
 msgid "Opacity"
-msgstr "Opacité"
+msgstr "Transparantie"
 
 #: src/SARgui.cpp:886
 msgid "CPU saving settings"
-msgstr "Sauvegarde des réglages"
+msgstr "CPU instellingen opslaan"
 
 #: src/SARgui.cpp:896
 msgid "Capture Ship Position"
-msgstr "Capture de la position du bateau"
+msgstr "Vastleggen eigen positie"
 
 #: src/SARgui.cpp:898
 msgid "Leave ticked, so you can use ship's position"
-msgstr "Laissez coché, et vous pouvez utiliser la position du navire"
+msgstr "Laat geselecteerd, zodat u uw scheepspositie kunt gebruiken "
 
 #: src/SARgui.cpp:902
 msgid "Capture Cursor Position"
-msgstr "Capture de la position du curseur"
+msgstr "Vastleggen cursorpositie"
 
 #: src/SARgui.cpp:904
 msgid "Leave ticked, so that you can use cursor position."
-msgstr "Laissez coché, et vous pourrez utiliser la position du curseur."
+msgstr "Laat geselcteerd, zodat u de cursorpositie kunt gebruiken"
 
 #: src/SAR_pi.cpp:154
 msgid "Search and Resque Patterns"
-msgstr "Recherche et sauvegarde des modèles"
+msgstr "SAR zoekpatronen"
 
 #: src/SAR_pi.cpp:159
 msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Création d'un fichier GPX avec\nles modèles recherchés et sauvegardés."
+msgstr "Maakt GPX-bestanden met\nSAR zoekpatronen."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
-msgstr "Préférences de la routes"
+msgstr "Routevoorkeuren"
 
 #: src/SARgui_impl.cpp:176
 msgid "Export SAR track GPX file as"
-msgstr "Exporter la trace de la recherche comme un fichier GPX"
+msgstr "Exporteer GPX-bestand SAR-track als"
 
 #: src/SARgui_impl.cpp:189
 msgid "error in input range validation"
-msgstr "Erreur de validation de données entrées"
+msgstr "fout bij invoervalidatie"
 
 #: src/SARgui_impl.cpp:232
 msgid "Error occured, aborting SAR calc!"
-msgstr "Une erreur s'est produite. Calcul avorté."
+msgstr "Fout opgetreden, SAR-berekening afgebroken!"
 
 #: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
 msgid "Error in calculation. Please check input!"
-msgstr "Erreur dans le calcul. Vérifiez vos entrées."
+msgstr "Fout in berekening. Controleer de input!"
 
 #: src/SARgui_impl.cpp:606
 msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "Pour copier la position du curseur, sélectionner la latitude et la longitude dans la boite des coordonnées, et appuyer sur la combinaison de touches \"Ctrl\"  et \"S\" du clavier"
+msgstr "Om de cursorlocatie te kopiëren: selecteer het Breedte- of Lengteveld en druk op <CTRL>+S."
 
 #: src/SARgui_impl.h:54
 msgid "SAR Plugin by SaltyPaws"
-msgstr "Complément \"SAR\" par Salty Paws"
+msgstr "SAR PlugIn door SaltyPaws"
 
