--- a/po/ca.po
+++ b/po/ca.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-21 14:54-0400\n"
+"PO-Revision-Date: 2015-05-23 05:01-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Catalan\n"
 "Language: ca_ES\n"
@@ -91,8 +91,10 @@ msgid "SAR: Trackline"
 msgstr "SAR: Línia de recorregut"
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
-msgstr "Recercar Augmentant\n el Quadrat"
+msgid "Expanding Square\n"
+"         Search"
+msgstr "Recercar Augmentant\n"
+" el Quadrat"
 
 #: src/SARgui.cpp:205
 msgid "Leg Distance               "
@@ -275,8 +277,10 @@ msgid "Search and Resque Patterns"
 msgstr "Plantilles de Cerca i Rescat"
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Crea fitxers GPX amb les plantilles\nCerca i rescat."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
+msgstr "Crea fitxers GPX amb les plantilles\n"
+"Cerca i rescat."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
@@ -304,5 +308,5 @@ msgstr "Per poder copiar la ubicació de cursor, seleccioneu caixa de coordenade
 
 #: src/SARgui_impl.h:54
 msgid "SAR Plugin by SaltyPaws"
-msgstr "Plugin SAR per SaltyPaws"
+msgstr "Connector SAR per SaltyPaws"
 
