--- a/po/fi.po
+++ b/po/fi.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-12 16:10-0400\n"
+"PO-Revision-Date: 2015-05-23 05:01-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Finnish\n"
 "Language: fi_FI\n"
@@ -91,8 +91,10 @@ msgid "SAR: Trackline"
 msgstr "SAR: Jälkiviiva"
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
-msgstr "Laajeneva neliö\n Haku"
+msgid "Expanding Square\n"
+"         Search"
+msgstr "Laajeneva neliö\n"
+" Haku"
 
 #: src/SARgui.cpp:205
 msgid "Leg Distance               "
@@ -275,8 +277,10 @@ msgid "Search and Resque Patterns"
 msgstr "Etsi ja pelasta kuviot"
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Luo GPX tiedostot\netsi ja pelasta malleille."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
+msgstr "Luo GPX tiedostot\n"
+"etsi ja pelasta malleille."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
