--- a/po/nb.po
+++ b/po/nb.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-07 11:23-0400\n"
+"PO-Revision-Date: 2015-05-29 14:06-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Norwegian Bokmal\n"
 "Language: nb_NO\n"
@@ -91,8 +91,10 @@ msgid "SAR: Trackline"
 msgstr "SAR: Sporings-strek"
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
-msgstr "Ekspanderende firkant-\n søk"
+msgid "Expanding Square\n"
+"         Search"
+msgstr "Ekspanderende firkant-\n"
+" søk"
 
 #: src/SARgui.cpp:205
 msgid "Leg Distance               "
@@ -275,8 +277,10 @@ msgid "Search and Resque Patterns"
 msgstr "Søk og rednings mønstre"
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Oppretter GPX filer med\nSøk og rednings mønstre."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
+msgstr "Oppretter GPX filer med\n"
+"Søk og rednings mønstre."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
