--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-07 11:23-0400\n"
+"PO-Revision-Date: 2015-05-29 14:05-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -91,7 +91,8 @@ msgid "SAR: Trackline"
 msgstr "SAR: Trackliijn"
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
+msgid "Expanding Square\n"
+"         Search"
 msgstr "Vierkant zoek-/npatroon"
 
 #: src/SARgui.cpp:205
@@ -275,8 +276,10 @@ msgid "Search and Resque Patterns"
 msgstr "SAR zoekpatronen"
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Maakt GPX-bestanden met\nSAR zoekpatronen."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
+msgstr "Maakt GPX-bestanden met\n"
+"SAR zoekpatronen."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
