--- a/po/es.po
+++ b/po/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-04-21 14:53-0400\n"
+"PO-Revision-Date: 2016-02-18 16:08-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Spanish\n"
 "Language: es_ES\n"
@@ -91,8 +91,10 @@ msgid "SAR: Trackline"
 msgstr "SAR: Línea de derrota"
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
-msgstr "Ampliar cuadro\nBúsqueda"
+msgid "Expanding Square\n"
+"         Search"
+msgstr "Ampliar cuadro\n"
+"Búsqueda"
 
 #: src/SARgui.cpp:205
 msgid "Leg Distance               "
@@ -275,8 +277,10 @@ msgid "Search and Resque Patterns"
 msgstr "Patrones de Búsqueda y Rescate"
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
-msgstr "Crear archivos GPX con\npatrones de búsqueda y rescate."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
+msgstr "Crear archivos GPX con\n"
+"patrones de búsqueda y rescate."
 
 #: src/SAR_pi.cpp:232
 msgid "Route Preferences"
