--- a/po/ru.po
+++ b/po/ru.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-29 18:59+0100\n"
-"PO-Revision-Date: 2015-03-02 22:15-0500\n"
+"PO-Revision-Date: 2016-01-25 19:58-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Russian\n"
 "Language: ru_RU\n"
@@ -13,6 +13,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: crowdin.com\n"
 "X-Crowdin-Project: opencpn\n"
+"X-Crowdin-Language: ru\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
 
 #: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
@@ -90,7 +91,8 @@ msgid "SAR: Trackline"
 msgstr ""
 
 #: src/SARgui.cpp:176
-msgid "Expanding Square\n         Search"
+msgid "Expanding Square\n"
+"         Search"
 msgstr ""
 
 #: src/SARgui.cpp:205
@@ -274,7 +276,8 @@ msgid "Search and Resque Patterns"
 msgstr ""
 
 #: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\nSearch and resque patterns."
+msgid "Creates GPX files with\n"
+"Search and resque patterns."
 msgstr ""
 
 #: src/SAR_pi.cpp:232
