--- a/po/ca.po
+++ b/po/ca.po
@@ -273,12 +273,12 @@ msgid "Leave ticked, so that you can use cursor position."
 msgstr "Deixar marcat, per poder utilitzar la posició del cursor."
 
 #: src/SAR_pi.cpp:154
-msgid "Search and Resque Patterns"
+msgid "Search and Rescue Patterns"
 msgstr "Plantilles de Cerca i Rescat"
 
 #: src/SAR_pi.cpp:159
 msgid "Creates GPX files with\n"
-"Search and resque patterns."
+"Search and rescue patterns."
 msgstr "Crea fitxers GPX amb les plantilles\n"
 "Cerca i rescat."
 
