--- a/po/el.po
+++ b/po/el.po
@@ -273,12 +273,12 @@ msgid "Leave ticked, so that you can use cursor position."
 msgstr "Σημαδέψτε το για να χρησιμοποιήσετε τη θέση του δρομέα."
 
 #: src/SAR_pi.cpp:154
-msgid "Search and Resque Patterns"
+msgid "Search and Rescue Patterns"
 msgstr "Μοτίβα Έρευνας και Διάσωσης"
 
 #: src/SAR_pi.cpp:159
 msgid "Creates GPX files with\n"
-"Search and resque patterns."
+"Search and rescue patterns."
 msgstr "Δημιουργεί αρχεία GPX με\n"
 "μοτίβα Έρευνας και Διάσωσης."
 
