--- a/po/fi.po
+++ b/po/fi.po
@@ -273,12 +273,12 @@ msgid "Leave ticked, so that you can use cursor position."
 msgstr "Aseta merkki, niin voit käyttää sitä kohdistimen sijaintina."
 
 #: src/SAR_pi.cpp:154
-msgid "Search and Resque Patterns"
+msgid "Search and Rescue Patterns"
 msgstr "Etsi ja pelasta kuviot"
 
 #: src/SAR_pi.cpp:159
 msgid "Creates GPX files with\n"
-"Search and resque patterns."
+"Search and rescue patterns."
 msgstr "Luo GPX tiedostot\n"
 "etsi ja pelasta malleille."
 
